# markdown-extract

./: .gitignore  AGENTS.md  Cargo.toml  DOC_CATALOG.md  Dockerfile  README.bak  README.md  markdown-doc.plan.md  markdown-doc.plan.nd  markdown-doc.spec.md  markdown-edit.spec.md
.github/workflows/: bench.yml  build_and_test.yml
crates/markdown-doc-cli/: Cargo.toml
crates/markdown-doc-cli/src/: lib.rs  main.rs
crates/markdown-doc-cli/tests/: cli.rs
crates/markdown-doc-config/: Cargo.toml
crates/markdown-doc-config/src/: lib.rs
crates/markdown-doc-config/tests/: loader.rs
crates/markdown-doc-core/: Cargo.toml
crates/markdown-doc-core/src/: lib.rs
crates/markdown-doc-format/: Cargo.toml
crates/markdown-doc-format/src/: lib.rs
crates/markdown-doc-ops/: Cargo.toml
crates/markdown-doc-ops/src/: anchors.rs  lib.rs  lines.rs  lint.rs  paths.rs  schema.rs  toc.rs
crates/markdown-doc-ops/src/refactor/: graph.rs  mod.rs  rewrite.rs
crates/markdown-doc-ops/tests/: graph.rs  lint.rs  mv.rs  refs.rs  rewrite.rs  toc.rs
crates/markdown-doc-parser/: Cargo.toml
crates/markdown-doc-parser/src/: lib.rs
crates/markdown-doc-parser/tests/: parser.rs
crates/markdown-doc-test-support/: Cargo.toml
crates/markdown-doc-test-support/src/: lib.rs
crates/markdown-doc-utils/: Cargo.toml
crates/markdown-doc-utils/src/: lib.rs
crates/markdown-edit-cli/: Cargo.toml
crates/markdown-edit-cli/src/: main.rs
crates/markdown-edit-cli/tests/: cli.rs
crates/markdown-edit-cli/tests/fixtures/: sample.md
crates/markdown-edit-core/: Cargo.toml
crates/markdown-edit-core/src/: diff.rs  engine.rs  error.rs  fs.rs  lib.rs  payload.rs  section.rs
crates/markdown-edit-core/tests/: engine.rs
crates/markdown-extract/: Cargo.toml
crates/markdown-extract-cli/: CHANGELOG.md  Cargo.toml
crates/markdown-extract-cli/src/: main.rs
crates/markdown-extract-cli/tests/: broken_pipe.rs  stdin.rs
crates/markdown-extract/src/: heading.rs  lib.rs  line.rs  state.rs
crates/markdown-extract/tests/: extract.rs
crates/markdown-extract/tests/markdown/: mixed_headings.md  offsets.md
crates/markdown_bindings_common/: Cargo.toml
crates/markdown_bindings_common/src/: lib.rs
crates/markdown_doc_py/: Cargo.toml
crates/markdown_doc_py/src/: lib.rs
crates/markdown_edit_py/: Cargo.toml
crates/markdown_edit_py/src/: lib.rs
crates/markdown_extract_py/: Cargo.toml
crates/markdown_extract_py/src/: lib.rs
docs/markdown-doc/: README.md
docs/work-packages/20251025_markdown_doc_toolkit/: package.md  rfc_markdown_doc_adoption.md  tracker.md
docs/work-packages/20251025_markdown_doc_toolkit/prompts/active/: agent10_phase3_refs.md  agent11_phase0_telemetry.md  agent1_config_loader.md  agent2_parser_spans.md  agent4_ci_bench.md  agent6_phase2_validate.md  agent7_phase2_toc_severity.md  agent8_phase3_link_graph.md  claude_phase3_docs_refresh.md  claude_readme_quickstart_review.md
docs/work-packages/20251025_markdown_doc_toolkit/prompts/completed/: agent3_catalog_lint.md  agent5_phase2_lint_rules.md  agent9_phase3_mv.md
docs/work-packages/20251028_pyo3_bindings/: DEPLOYMENT_GUIDE.md  M1_COMPLETION_SUMMARY.md  M1_VALIDATION_REPORT.md  M2_COMPLETION_SUMMARY.md  PYTHON_API_REFERENCE.md  package.md  tracker.md
docs/work-packages/20251028_pyo3_bindings/prompts/active/: agent1_m1_extract_bindings.md  agent2_m2_edit_bindings.md
python/: README.md  pyproject.toml
python/markdown_doc_py/: __init__.py  __init__.pyi
python/markdown_edit_py/: __init__.py  __init__.pyi
python/markdown_extract_py/: __init__.py  __init__.pyi
python/tests/: test_doc_toc.py  test_edit.py  test_extract.py
tests/: validate.rs
tests/markdown-doc/: README.md
tests/markdown-doc/refactor/complex/: README.md
tests/markdown-doc/refactor/complex/nested/: feature.md
tests/markdown-doc/refactor/complex/nested/deep/: usage.md
tests/markdown-doc/schemas/: .markdown-doc.toml  invalid.md  valid.md
tools/markdown-doc-bench/: Cargo.toml
tools/markdown-doc-bench/src/: main.rs
