[workspace]
members = [
    "crates/markdown-extract",
    "crates/markdown-extract-cli",
    "crates/markdown-edit-core",
    "crates/markdown-edit-cli",
    "crates/markdown-doc-config",
    "crates/markdown-doc-parser",
    "crates/markdown-doc-utils",
    "crates/markdown-doc-format",
    "crates/markdown-doc-ops",
    "crates/markdown-doc-core",
    "crates/markdown-doc-cli",
    "crates/markdown-doc-test-support",
    "tools/markdown-doc-bench",
    "crates/markdown_bindings_common",
    "crates/markdown_extract_py",
    "crates/markdown_edit_py",
    "crates/markdown_doc_py",
]
resolver = "2"
