[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "markdown-bindings"
version = "0.1.0"
description = "Helper project for markdown PyO3 bindings"
requires-python = ">=3.8"
readme = "README.md"
keywords = ["markdown", "regex", "bindings", "pyo3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]

[tool.maturin]
# Each binding crate is built via `maturin develop --manifest-path crates/<name>/Cargo.toml`.
features = ["pyo3/extension-module"]
