[package]
name = "markdown-doc-format"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
markdown-doc-config = { path = "../markdown-doc-config" }
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
