[package]
name = "markdown-doc-ops"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
markdown-doc-config = { path = "../markdown-doc-config" }
markdown-doc-parser = { path = "../markdown-doc-parser" }
markdown-doc-format = { path = "../markdown-doc-format" }
markdown-doc-utils = { path = "../markdown-doc-utils" }
globset = "0.4"
rayon = "1.8"
serde_json = "1.0"
strsim = "0.11"
thiserror = "1.0"
walkdir = "2.5"
pulldown-cmark = "0.9"
percent-encoding = "2.3"

[dev-dependencies]
tempfile = "3.10"
