[package]
name = "markdown-edit-cli"
description = "Command-line interface for heading-aware markdown editing"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
markdown-edit-core = { path = "../markdown-edit-core" }
markdown-extract = { path = "../markdown-extract" }
regex = "1.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
[[bin]]
name = "markdown-edit"
path = "src/main.rs"
