[package]
name = "markdown-edit-core"
description = "Core engine for heading-aware markdown editing"
version = "0.1.0"
edition = "2021"
authors = ["Automation Agent <agent@example.com>"]
license = "MIT"
publish = false

[dependencies]
markdown-extract = { path = "../markdown-extract" }
regex = "1.11"
similar = "2.5"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
