[package]
name = "markdown_edit_py"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PyO3 bindings for the markdown-edit core engine"

[lib]
name = "markdown_edit_py"
crate-type = ["cdylib"]

[dependencies]
markdown-edit-core = { path = "../markdown-edit-core" }
markdown_bindings_common = { path = "../markdown_bindings_common" }
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
regex = "1.11"
