[package]
name = "markdown-doc-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
markdown-doc-config = { path = "../../crates/markdown-doc-config" }
markdown-doc-core = { path = "../../crates/markdown-doc-core" }
markdown-doc-ops = { path = "../../crates/markdown-doc-ops" }
markdown-doc-format = { path = "../../crates/markdown-doc-format" }
